# computorv2

./: .gitignore  CMakeLists.txt  README.md
inc/: Complex.hpp  Computor.hpp  Computorv2.hpp  Equation.hpp  IOperand.hpp  LexerParser.hpp  Matrix.hpp  Monomial.hpp  Operand.hpp  Rational.hpp  Real.hpp  Token.hpp  Variable.hpp
src/: Complex.cpp  Computor.cpp  Equation.cpp  IOperand.cpp  LexerParser.cpp  Matrix.cpp  Monomial.cpp  Operand.cpp  Rational.cpp  Real.cpp  Token.cpp  Variable.cpp  main.cpp
